--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jesper Orb",
   "license": "ISC",
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "json-server": "^0.16.2"
   }
 }
